--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,7 +4,7 @@
 
 :root {
     --primary-color: #ffb900;
-
+    --font-heading: sen, sans-serif;
     --text-color: #5f5b53;
 }
 
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-    font-family: "Poppins";
+    font-family: "Poppins", sans-serif;
     font-size: 1.6rem;
     color: var(--text-color);
 }
@@ -34,19 +34,25 @@ a {
 .btn {
     display: inline-block;
     padding: 0 16px;
-    width: 118px;
+    min-width: 118px;
     color: #fff;
     text-align: center;
     font-size: 1.6rem;
     font-style: normal;
     font-weight: 600;
     line-height: 50px; /* 175% */
-    border-radius: 24.5px;
+    border-radius: 999px;
     background: #171100;
 }
 
 .btn:hover {
     opacity: 0.8;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* ======== Header ======== */
@@ -56,6 +62,7 @@ a {
 
 .header.fixed {
     position: sticky;
+    z-index: 1;
     top: -28px;
 }
 
@@ -104,9 +111,156 @@ a {
 
 .header .sign-up-btn {
     min-width: 144px;
+    margin-left: 49px;
 }
 
-/* ======== Header ======== */
+/* ======== Hero ======== */
+.hero {
+    padding: 56px 0 64px;
+    background: #fffcf4;
+}
+
+.hero .body {
+    display: flex;
+}
+
+.hero .media-block {
+    position: relative;
+    width: 48%;
+}
+
+.hero .media-block .img {
+    width: 470px;
+    height: 685px;
+    object-fit: cover;
+    border-radius: 20px;
+    display: block;
+}
+
+.hero .hero-summary {
+    position: absolute;
+    right: 0;
+    bottom: 48px;
+    width: 270px;
+    padding: 24px;
+    border-radius: 12px;
+    background: #fff;
+    box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.05);
+}
+
+.hero .hero-summary .item {
+    display: flex;
+    align-items: center;
+}
+
+.hero .hero-summary .item + .item {
+    margin-top: 22px;
+}
+
+.hero .item:nth-of-type(2) .icon {
+    background-color: #fcefff;
+}
+
+.hero .item:nth-of-type(3) .icon {
+    background-color: #ebeaff;
+}
+
+.hero-summary .icon {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    background: #fff9e8;
+}
+
+.hero-summary .info {
+    margin-left: 16px;
+}
+
+.hero-summary .info .label {
+    font-size: 1.4rem;
+    line-height: 1.85; /* 185.714% */
+}
+
+.hero-summary .info .title {
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.66; /* 166.667% */
+}
+
+.hero .content-block {
+    padding-left: 130px;
+    width: 52%;
+}
+
+.hero .content-block .heading {
+    color: #171100;
+    font-family: var(--font-heading);
+    font-size: 5.8rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 6.8rem; /* 117.241% */
+    letter-spacing: -0.116rem;
+}
+
+.hero .content-block .desc {
+    margin-top: 22px;
+    font-size: 1.8rem;
+    line-height: 1.66; /* 166.667% */
+}
+
+.hero .cta-group {
+    display: flex;
+    align-items: center;
+    margin: 38px 0 48px;
+}
+
+.hero-cta {
+    min-width: 180px;
+    background: var(--primary-color);
+}
+
+.hero .watch-video {
+    display: flex;
+    align-items: center;
+    border: none;
+    background-color: transparent;
+    margin-left: 28px;
+    cursor: pointer;
+}
+
+.hero .watch-video:hover {
+    opacity: 0.8;
+}
+
+.hero .watch-video .icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #fff;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.07);
+}
+
+.hero .watch-video span {
+    margin-left: 14px;
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.66; /* 166.667% */
+}
+
+.hero .stats {
+    margin-left: -28px;
+}
+
+.hero .stats strong {
+    margin: 8px 8px 0 28px;
+    color: #171100;
+    font-family: var(--font-heading);
+    font-size: 4.4rem;
+    font-weight: 700;
+    line-height: 1.22; /* 122.727% */
+}
 
 /* ======== Header ======== */
 
