--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -24,11 +24,37 @@ a {
     color: var(--text-color);
 }
 
+button {
+    border: none;
+}
+
 .main-content {
     width: 1170px;
     max-width: calc(100% - 48px);
     margin-left: auto;
     margin-right: auto;
+}
+
+.heading {
+    color: #171100;
+    font-family: var(--font-heading);
+    font-weight: 700;
+    letter-spacing: -0.116rem;
+}
+
+.heading.lv1 {
+    font-size: 5.8rem;
+    line-height: 1.17; /* 117.241% */
+}
+
+.heading.lv2 {
+    font-size: 3.8rem;
+    line-height: 1.26; /* 126.316% */
+}
+
+.desc {
+    font-size: 1.8rem;
+    line-height: 1.66; /* 166.667% */
 }
 
 .btn {
@@ -47,6 +73,7 @@ a {
 
 .btn:hover {
     opacity: 0.8;
+    cursor: pointer;
 }
 
 .center {
@@ -193,20 +220,8 @@ a {
     width: 52%;
 }
 
-.hero .content-block .heading {
-    color: #171100;
-    font-family: var(--font-heading);
-    font-size: 5.8rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 6.8rem; /* 117.241% */
-    letter-spacing: -0.116rem;
-}
-
 .hero .content-block .desc {
     margin-top: 22px;
-    font-size: 1.8rem;
-    line-height: 1.66; /* 166.667% */
 }
 
 .hero .cta-group {
@@ -261,6 +276,112 @@ a {
     font-weight: 700;
     line-height: 1.22; /* 122.727% */
 }
+
+/* ======== Popular ======== */
+
+.popular {
+    padding: 65px 0;
+    margin-top: 135px;
+}
+
+.popular .course-item .rating,
+.popular .course-item .foot,
+.popular .course-item .head,
+.popular .popular-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.popular-top .desc {
+    width: 458px;
+    margin-top: 16px;
+}
+
+.popular-top .controls {
+    display: flex;
+    gap: 18px;
+}
+
+.popular-top .control-btn {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    background: transparent;
+}
+
+.popular-top .control-btn:hover {
+    color: #fff;
+    background-color: var(--primary-color);
+}
+
+.popular .course-list {
+    display: flex;
+    margin-top: 55px;
+    gap: 30px;
+}
+
+.popular .course-item {
+    flex: 1;
+    border-radius: 12px;
+    border: 1px solid #e2dfda;
+    background: #fff;
+}
+
+.popular .course-item:hover {
+    border-color: transparent;
+    box-shadow: 0 18px 36px 0 rgba(0, 0, 0, 0.05);
+}
+
+.popular .course-item .thumb {
+    margin: -1px;
+    width: calc(100% + 2px);
+    height: 278px;
+    object-fit: cover;
+    border-radius: 12px 12px 0 0;
+}
+
+.popular .course-item .info {
+    padding: 16px 22px 22px;
+}
+
+.popular .course-item a {
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.66; /* 166.667% */
+}
+
+.popular .course-item .value {
+    color: #fea31b;
+    font-size: 1.6rem;
+    line-height: 1.75; /* 175% */
+}
+
+.popular .course-item .desc {
+    margin-top: 6px;
+    font-size: 1.4rem;
+    line-height: 1.85; /* 185.714% */
+}
+
+.popular .course-item .foot {
+    margin-top: 12px;
+}
+
+.popular .course-item .price {
+    color: #171100;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.66; /* 166.667% */
+}
+
+.popular .course-item .book-btn:hover {
+    color: #fff;
+    background-color: var(--primary-color);
+}
+/* ======== Header ======== */
 
 /* ======== Header ======== */
 
