--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,6 +52,17 @@ button {
     line-height: 1.26; /* 126.316% */
 }
 
+.line-clamp {
+    display: -webkit-box;
+    -webkit-line-clamp: var(--line-clamp, 1);
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.line-clamp.line-2 {
+    --line-clamp: 2;
+}
+
 .desc {
     font-size: 1.8rem;
     line-height: 1.66; /* 166.667% */
@@ -80,6 +91,10 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.beark-all {
+    word-break: break-all;
 }
 
 /* ======== Header ======== */
@@ -210,6 +225,7 @@ button {
 
 .hero-summary .info .title {
     color: #171100;
+
     font-size: 1.8rem;
     font-weight: 600;
     line-height: 1.66; /* 166.667% */
@@ -348,6 +364,7 @@ button {
 }
 
 .popular .course-item a {
+    padding-right: 8px;
     color: #171100;
     font-size: 1.8rem;
     font-weight: 600;
@@ -355,6 +372,7 @@ button {
 }
 
 .popular .course-item .value {
+    margin-left: 6px;
     color: #fea31b;
     font-size: 1.6rem;
     line-height: 1.75; /* 175% */
@@ -372,7 +390,7 @@ button {
 
 .popular .course-item .price {
     color: #171100;
-    font-size: 18px;
+    font-size: 1.8rem;
     font-weight: 600;
     line-height: 1.66; /* 166.667% */
 }
@@ -381,8 +399,79 @@ button {
     color: #fff;
     background-color: var(--primary-color);
 }
-/* ======== Header ======== */
 
+/* ======== Feedback ======== */
+.feedback {
+    margin-top: 135px;
+    background: #2e2100;
+    padding: 96px 0;
+}
+
+.feedback-list {
+    display: flex;
+    overflow: hidden;
+}
+
+.feedback-item {
+    width: 100%;
+    flex-shrink: 0;
+    display: flex;
+}
+
+.feedback-item .info .avatar {
+    width: 72px;
+    height: 72px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.feedback-item .info .title {
+    margin-top: 18px;
+    color: #f7f7f7;
+    font-family: var(--font-heading);
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 1.41; /* 141.667% */
+}
+
+.feedback-item .info .desc {
+    margin-top: 4px;
+    color: #bfbcb2;
+    font-size: 1.4rem;
+    line-height: 1.85; /* 185.714% */
+}
+
+.feedback-item .dots {
+    display: flex;
+    margin-top: 28px;
+}
+
+.feedback-item .dots .dot {
+    margin-right: 6px;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #634700;
+    cursor: pointer;
+}
+
+.feedback-item .dot.active {
+    cursor: default;
+    background: var(--primary-color);
+}
+
+.feedback-item .content {
+    width: 64%;
+    margin-left: auto;
+}
+
+.feedback-item .content blockquote {
+    margin-left: 30px;
+    color: #fff;
+    font-size: 2.6rem;
+    font-style: italic;
+    line-height: 1.53; /* 153.846% */
+}
 /* ======== Header ======== */
 
 /* ======== Header ======== */
