--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -472,6 +472,69 @@ button {
     font-style: italic;
     line-height: 1.53; /* 153.846% */
 }
-/* ======== Header ======== */
+
+/* ======== Features ======== */
+.features {
+    margin-top: 135px;
+    padding: 65px 0;
+}
+
+.features .body {
+    display: flex;
+    justify-content: space-between;
+}
+
+.features .body .images {
+    display: flex;
+    gap: 0 30px;
+}
+
+.features .images img {
+    width: 270px;
+    height: 404px;
+    border-radius: 16px;
+    object-fit: cover;
+}
+
+.features img.lower {
+    margin-top: 34px;
+}
+
+.features .body .content {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    width: 41%;
+}
+
+.features .content .desc {
+    margin-top: 16px;
+    font-size: 1.6rem;
+    line-height: 1.75; /* 175% */
+}
+
+.features .content .cta-btn {
+    margin-top: 32px;
+    background: var(--primary-color);
+    min-width: 137px;
+}
+
+.features-2nd {
+    margin-top: 70px;
+}
+
+.features-2nd .body {
+    flex-direction: row-reverse;
+}
+
+.features-2nd .images img {
+    width: 470px;
+    height: 440px;
+}
+
+.features-2nd .body .content {
+    width: 49%;
+}
 
 /* ======== Header ======== */
