--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,7 @@
 
 html {
     font-size: 62.5%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -653,3 +654,74 @@ button {
 }
 
 /* ======== Footer ======== */
+.footer {
+    background: #2e2100;
+    padding: 92px 135px 0;
+}
+
+.footer .row {
+    display: flex;
+    border-bottom: 1px solid #59554b;
+    padding-bottom: 38px;
+}
+
+.footer .row .column {
+    width: 21%;
+}
+
+.footer .desc {
+    max-width: 267px;
+    margin: 18px 0;
+    color: #bfbcb2;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.85; /* 185.714% */
+}
+
+.footer .social {
+    display: flex;
+    gap: 18px;
+}
+
+.footer .social a:hover {
+    opacity: 0.8;
+}
+
+.footer .column .title {
+    display: inline-block;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 1.75; /* 175% */
+    padding: 0 48px 14px 0;
+    border-bottom: 1px solid #59554b;
+}
+
+.footer .column .list {
+    margin-top: 28px;
+}
+
+.footer .list a {
+    display: inline-block;
+    margin-bottom: 12px;
+    color: #bfbcb2;
+    font-size: 14px;
+    line-height: 1.85; /* 185.714% */
+}
+
+.footer .list li:last-child a {
+    margin-bottom: 0;
+}
+
+.footer .list strong {
+    font-weight: 600;
+    color: #fff;
+}
+
+.footer .row .column:first-child {
+    width: 34%;
+}
+
+.footer .copyright {
+    padding: 28px 0;
+}
